# Aegis-contract

./: .gitignore  CONTRIBUTING.md  README.md
smartcontract/: Cargo.toml  README.md
smartcontract/contracts/mock_strategy/: Cargo.toml
smartcontract/contracts/mock_strategy/src/: lib.rs  test.rs
smartcontract/contracts/volatility_shield/: Cargo.toml
smartcontract/contracts/volatility_shield/src/: lib.rs  test.rs
smartcontract/contracts/volatility_shield/test_snapshots/test/: test_caps_not_set_allows_unlimited.1.json  test_deposit_at_exact_cap.1.json  test_deposit_exceeds_global_cap.1.json  test_deposit_exceeds_per_user_cap.1.json  test_deposit_flow.1.json  test_execute_action_after_timelock_expires.1.json  test_execute_action_before_timelock_expires_panics.1.json  test_execute_action_without_proposal_panics.1.json  test_fuzz_conversion_no_panic.1.json  test_fuzz_conversion_no_panic.10.json  test_fuzz_conversion_no_panic.100.json  test_fuzz_conversion_no_panic.11.json  test_fuzz_conversion_no_panic.12.json  test_fuzz_conversion_no_panic.13.json  test_fuzz_conversion_no_panic.14.json  test_fuzz_conversion_no_panic.15.json  test_fuzz_conversion_no_panic.16.json  test_fuzz_conversion_no_panic.17.json  test_fuzz_conversion_no_panic.18.json  test_fuzz_conversion_no_panic.19.json  test_fuzz_conversion_no_panic.2.json  test_fuzz_conversion_no_panic.20.json  test_fuzz_conversion_no_panic.21.json  test_fuzz_conversion_no_panic.22.json  test_fuzz_conversion_no_panic.23.json  test_fuzz_conversion_no_panic.24.json  test_fuzz_conversion_no_panic.25.json  (+197 more)
(+2 files in other folders)
