[workspace]
resolver = "2"

members = [
    "contracts/volatility_shield",
    "contracts/mock_strategy",
]

[workspace.dependencies]
soroban-sdk = "22.0.9"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true